--- a/mindbell-app/AndroidManifest.xml
+++ b/mindbell-app/AndroidManifest.xml
@@ -19,7 +19,9 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
 
-    <application android:debuggable="false" android:icon="@drawable/icon" android:label="@string/app_name">
+    <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="17"/>
+
+    <application android:allowBackup="true" android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:label="@string/app_name" android:name="MindBellMain">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -53,7 +55,5 @@
             </intent-filter>
         </receiver>
     </application>
-
-    <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="17"/>
 
 </manifest>
